--- a/src/app/components/movie-search/movie-search.component.scss
+++ b/src/app/components/movie-search/movie-search.component.scss
@@ -1,48 +1,48 @@
 $panel-height: 260px;
 
 label {
-	display: block;
+    display: block;
 }
 
 #search-input {
-	width: calc(100% - 50px);
-	display: inline-block;
+    width: calc(100% - 50px);
+    display: inline-block;
 }
 
 #favorite-button {
-	background: transparent;
-	border: 2px solid #ba54f5;
-	display: inline-block;
-	margin: 0 2px;
+    background: transparent;
+    border: 2px solid #ba54f5;
+    display: inline-block;
+    margin: 0 2px;
 }
 
-#favorite-button.highlighted {
-	background: #ba54f5 !important;
+.highlighted {
+    background: #ba54f5 !important;
 }
 
 .scrollable {
-	height: $panel-height;
-	overflow-y: auto;
-	overflow-x: hidden;
+    height: $panel-height;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .movie-list button.movie-btn {
-	margin: 1px;
+    margin: 1px;
 }
 
 .movie-image {
-	height: 100%;
-	width: 100%;
-	max-height: $panel-height;
+    height: 100%;
+    width: 100%;
+    max-height: $panel-height;
 }
 
 .movie-image > img {
-	max-height: 100%;
-	height: calc(100% - 24px);
-	width: auto;
-	margin-bottom: 8px;
+    max-height: 100%;
+    height: calc(100% - 24px);
+    width: auto;
+    margin-bottom: 8px;
 }
 
 a.badge {
-	color: #fff;
+    color: #fff;
 }
